@startuml
!theme reddress-darkgreen
skinparam style strictuml

package western {
class Barman extends western.Personnage {
-clientele : Personnage[*]
-nomDuBar : String
-boissonParDefaut : Boisson
+ <<create>> Barman(nom : String)
+ <<create>> Barman(nom : String, nomDuBar : String)
+getPseudo() : String
+dire(texte : String)
+sePresenter()
+servir(client : Personnage)

}
class Boisson {
-substantif : Substantif
+ {static} EAU : Boisson
- {static} boissons : Boisson[*]
+ {static} of(nom : String, genre : Genre) : Boisson
- <<create>> Boisson(nom : String, genre : Genre)
+getNom() : String
+getGenre() : Genre
+getNomAvecArticleIndefini() : String
+getNomAvecArticlePartitif() : String
+getNomAvecArticleDefini() : String
+getNomAvecPreposition(preposition : String) : String

}
class Brigand extends western.Personnage implements western.HorsLaLoi {
# {static}  {readonly} LOOK_PAR_DEFAUT : String
-look : String
-recompense : Integer
-estLibre : Boolean
-captives : Dame[*]
-gardien : Cowboy
+ <<create>> Brigand(nom : String)
+ <<create>> Brigand(nom : String, boisson : Boisson)
+ <<create>> Brigand(nom : String, boisson : Boisson, look : String)
+getLook() : String
+getRecompense() : Integer
+estLibre() : Boolean
+kidnapper(dame : Dame)
+getCaptives() : Dame[*]
+seFaireCapturer(cowBoy : Cowboy)
+seFaireTirerDessus(cowBoy : Cowboy)
+getPseudo() : String
+sePresenter()
- {static} boissonParDefaut : Boisson
+ {static} getBoissonParDefaut() : Boisson
+ {static} setBoissonParDefaut(boisson : Boisson)

}
class Cowboy extends western.Personnage {
-gains : Integer
-captures : HorsLaLoi[*]
+ <<create>> Cowboy(nom : String)
+ <<create>> Cowboy(nom : String, boisson : Boisson)
+getPseudo() : String
+liberer(dame : Dame)
+liberer(captives : Dame[*])
+capturer(horsLaLoi : HorsLaLoi)
+tirerSur(brigand : HorsLaLoi)
+sePresenter()
- {static} boissonParDefaut : Boisson
+ {static} getBoissonParDefaut() : Boisson
+ {static} setBoissonParDefaut(boisson : Boisson)

}
class Dame extends western.Personnage {
-estLibre : Boolean
-sauveur : Cowboy
-ravisseur : HorsLaLoi
+ <<create>> Dame(nom : String)
+ <<create>> Dame(nom : String, boisson : Boisson)
+getPseudo() : String
+seFaireKidnapper(horsLaLoi : HorsLaLoi)
+seFaireLiberer(cowBoy : Cowboy)
+estLibre() : Boolean
+sePresenter()
- {static} boissonParDefaut : Boisson
+ {static} getBoissonParDefaut() : Boisson
+ {static} setBoissonParDefaut(boisson : Boisson)
+getRavisseur() : HorsLaLoi

}
enum Genre <<enumeration>> {
FEMININ
MASCULIN

}
class Histoire4 {
+ <<create>> Histoire4()
-somethings : Integer[*]
+ {static} main(args : String[*])

}
class Histoire5 {
+ <<create>> Histoire5()
+ {static} main(args : String[*])

}
interface HorsLaLoi <<interface>> {
+estLibre()
+getRecompense()
+kidnapper()
+seFaireCapturer()
+seFaireTirerDessus()
+getLook()
+getCaptives()

}
class Narrateur extends western.Personnage {
+ <<create>> Narrateur()
+ <<create>> Narrateur(nom : String)
+dire(texte : String)
+boire(boisson : Boisson)
+boire()
+getPseudo() : String

}
interface Nommable <<interface>> {
+getNom()
+getPseudo()

}
class Personnage implements western.Nommable {
- {static} BOISSON_PAR_DEFAUT : Boisson
-nom : String
-boisson : Boisson
+ <<create>> Personnage(nom : String)
+ <<create>> Personnage(nom : String, boisson : Boisson)
+dire(texte : String)
+sePresenter()
+boire(boisson : Boisson)
+boire()
+getNom() : String
+getBoisson() : Boisson
+ {static} getPseudos(personnages : Nommable[*]) : String
+ {static} getBoissonParDefaut() : Boisson

}
class Ripou extends western.Cowboy implements western.HorsLaLoi {
-brigand : Brigand
+ <<create>> Ripou(nom : String)
+ <<create>> Ripou(nom : String, boisson : Boisson)
+ <<create>> Ripou(nom : String, boisson : Boisson, look : String)
+getLook() : String
+estLibre() : Boolean
+getRecompense() : Integer
+kidnapper(dame : Dame)
+getCaptives() : Dame[*]
+seFaireCapturer(cowBoy : Cowboy)
+seFaireTirerDessus(cowBoy : Cowboy)
+getPseudo() : String
+sePresenter()
+liberer(dame : Dame)

}
class Sherif extends western.Cowboy {
-wanted : HorsLaLoi[*]
+ <<create>> Sherif(nom : String)
+ <<create>> Sherif(nom : String, boisson : Boisson)
+getNom() : String
+getWanted() : HorsLaLoi[*]
+sePresenter()
+capturer(horsLaLoi : HorsLaLoi)
+rechercher(horsLaLoi : HorsLaLoi)
+isWanted(horsLaLoi : HorsLaLoi) : Boolean

}
class Substantif {
-nom : String
-genre : Genre
+ <<create>> Substantif(nom : String, genre : Genre)
+getNom() : String
+getGenre() : Genre
+toString() : String
+ {static} isVowel(c : Char) : Boolean
+ {static} startsWithVowel(s : String) : Boolean
+getArticleIndefini() : String
+avecArticleIndefini() : String
+ {static} getArticleDefini(genre : Genre) : String
+getArticleDefini() : String
+avecArticleDefini() : String
+ {static} faireElision(article : String) : String
+elision() : Boolean
+getArticlePartitif() : String
+avecArticlePartitif() : String
+avecElision(article : String) : String
+avecPreposition(preposition : String) : String

}
western.Boisson -- Barman
western.Substantif -- Boisson
western.Boisson -- Boisson
western.Cowboy -- Brigand
western.Boisson -- Brigand
western.Boisson -- Cowboy
western.Cowboy -- Dame
western.HorsLaLoi -- Dame
western.Boisson -- Dame
western.Boisson -- Personnage
western.Boisson -- Personnage
western.Brigand -- Ripou
western.Genre -- Substantif

@enduml

